# enterprise-saas-insights-lab

./: .env.example  .gitignore  AGENTS.md  BUILD_REPORT.md  CODEX_TASKS.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: scoring.toml
delivery/: README.md
delivery/appsheet/: README.md
delivery/gas_webapp/: Code.gs  Index.html  SamplePayload.gs  dashboard.html  data.json
delivery/looker/: gtm.model.lkml  gtm_company_monthly.view.lkml
docs/: architecture.md  business_review.md  data_dictionary.md  interview_demo.md  reference_architecture.md
docs/assets/: _demo.webm
pages/: 1_Executive_Portfolio.py  2_Account_360.py  3_Competitive_Positioning.py  4_Data_Quality.py  5_Model_Governance.py  6_Dataset_Blueprint.py  7_Formula_Appendix.py  8_Revenue_Assurance.py  9_GTM_Economics.py
scripts/: bootstrap.py  build_delivery_dashboard.py  capture_demo_gif.py  capture_demo_video.py  capture_screenshots.py  export_demo.py
sql/: 01_staging.sql  02_asset_reconciliation.sql  03_account_features.sql  04_gtm.sql  05_views.sql
src/cisco_insights/: __init__.py  cli.py  config.py  data_generator.py  recommendations.py  scoring.py  tco.py
src/saas_insights/: __init__.py  briefing.py  cli.py  data_generator.py  db.py  gtm.py  pipeline.py  recommendations.py  scoring.py  tco.py  ui.py
tests/: test_briefing.py  test_gtm.py  test_pipeline.py  test_scoring.py  test_tco.py
