[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-saas-insights-lab"
version = "0.1.0"
description = "Explainable sales-insights and competitive-positioning lab using synthetic enterprise SaaS commercial data."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "duckdb>=1.1,<2",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "plotly>=5.24,<7",
  "streamlit>=1.42,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.9,<1",
]

[project.scripts]
saas-insights = "saas_insights.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Embedded HTML/JS template strings where wrapping would break the markup.
"scripts/build_delivery_dashboard.py" = ["E501"]
